@@ -1,3 +1,7 @@
+Mon Jul 17 03:00:21 CEST 2006 (acab)
+------------------------------------
+  * libclamav/wwunpack.c: image size fixup 
+
 Mon Jul 17 01:17:40 CEST 2006 (acab)
 ------------------------------------
   * libclamav: wwpack32 handler secured and activated
